# Polish-Cave-Data-Scraper

./: .pre-commit-config.yaml  CLAUDE.md  GEOREFERENCER.md  README.md  apply_worldfile.py  bibliography.csv  bibliography.jsonl  clean.py  compare_coordinates.py  download_bibliography.py  eda_dq.ipynb  fetch.py  georef_tool.py  index.html  parse.py  pyproject.toml  upscale_images.py
.github/workflows/: deploy-pages.yml
caves/000390/: metadata_15011.json  metadata_15012.json  metadata_19.json  page.html
caves/000391/: metadata_15010.json  metadata_20.json  page.html
caves/000392/: metadata_37.json  page.html
caves/000393/: metadata_38.json  page.html
caves/000394/: metadata_39.json  page.html
caves/000395/: metadata_40.json  page.html
caves/000396/: metadata_41.json  page.html
caves/000397/: metadata_42.json  page.html
caves/000398/: metadata_43.json  page.html
caves/000399/: metadata_44.json  page.html
caves/000401/: metadata_46.json  page.html
caves/000402/: metadata_47.json  page.html
caves/000403/: metadata_48.json  page.html
caves/000404/: metadata_49.json  page.html
caves/000406/: metadata_36.json  page.html
caves/000407/: metadata_2.json  page.html
caves/000408/: metadata_8.json  page.html
caves/000409/: metadata_7.json  page.html
caves/000410/: metadata_14238.json  metadata_14239.json  metadata_14243.json  page.html
caves/000411/: metadata_14173.json  metadata_21.json  page.html
caves/000412/: metadata_14174.json  metadata_22.json  page.html
caves/000413/: metadata_23.json  page.html
caves/000414/: metadata_24.json  page.html
caves/000415/: metadata_14178.json  metadata_14179.json  page.html
caves/000416/: metadata_14183.json  metadata_14184.json  page.html
caves/000417/: metadata_14185.json  metadata_14186.json  metadata_14188.json  page.html
caves/000418/: metadata_14189.json  metadata_14190.json  page.html
caves/000420/: metadata_14193.json  metadata_14194.json  page.html
caves/000421/: metadata_102.json  metadata_31.json  page.html
caves/000422/: metadata_32.json  page.html
caves/000423/: metadata_33.json  page.html
caves/000424/: metadata_34.json  page.html
caves/000425/: metadata_35.json  page.html
caves/000426/: metadata_5.json  page.html
caves/000427/: metadata_4.json  page.html
caves/000428/: page.html
caves/000470/: page.html
caves/000471/: page.html
caves/000472/: page.html
caves/000473/: page.html
caves/000490/: metadata_166.json  metadata_270.json  page.html
caves/000491/: metadata_81.json  page.html
caves/000493/: page.html
caves/000494/: page.html
caves/000495/: page.html
caves/000496/: metadata_12929.json  metadata_12930.json  metadata_12931.json  metadata_12932.json  page.html
caves/000650/: metadata_162.json  page.html
caves/000651/: metadata_163.json  page.html
caves/000653/: page.html
caves/000654/: page.html
caves/000655/: page.html
caves/000656/: page.html
caves/000657/: page.html  (+1 more)
caves_transformed.jsonl/: .part-00000-077a9c0f-a328-445c-b433-299777222d7f-c000.json.crc  .part-00000-198887ee-f0bc-4a62-9554-f9a26d550847-c000.json.crc  .part-00000-b33ac4bf-d4e9-4ea5-b019-5a315fd2d158-c000.json.crc
caves_transformed.parquet/: .part-00000-08c16e9a-df75-42c0-976b-81746ba7d39f-c000.snappy.parquet.crc  .part-00000-1042d7be-b678-49ce-81c1-de53b9a85fb8-c000.snappy.parquet.crc  .part-00000-bd55102c-56a0-4c17-8486-6a9ec4afc52a-c000.snappy.parquet.crc
locations/: README.md  caves_to_csv.py  caves_to_gpx.py  coordinate_comparison.csv  jaskinie_wgs84.gpx  jaskinie_wspolrzedne_wgs84.csv
logs/: verification_result.jsonl
(+13116 files in other folders)
