[tool.poetry]
name = "polish-cave-data-scraper"
version = "0.1.0"
description = "A Python tool to scrape and collect comprehensive data on Polish caves from the Central Geological Database of Polish Caves."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# External Dependencies
beautifulsoup4 = "^4.11.1"
requests = "^2.31.0"
pyspark = "3.5.3"
ipykernel = "^6.29.5"
pandas = {version = "^2.2.3", python = ">=3.9,<4.0"}
geopandas = "^0.14.0"

[tool.poetry.dev-dependencies]
# Development Dependencies
pytest = "^7.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
