[tool.poetry]
name = "polish-cave-data-scraper"
version = "0.1.0"
description = "A Python tool to scrape and collect comprehensive data on Polish caves from the Central Geological Database of Polish Caves."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

# External Dependencies
beautifulsoup4 = "^4.11.1"
requests = "^2.31.0"
pyspark = "3.5.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
geopandas = "^0.14.0"

[tool.poetry.group.dev.dependencies]
# Development Dependencies
pytest = "^7.2.0"
black = "^23.3.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ===== Code Quality Tools Configuration =====

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | caves
  | caves_upscaled
  | logs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude directories
extend-exclude = [
    "caves",
    "caves_upscaled",
    "logs",
    "waifu2x-ncnn-vulkan-20250915-macos",
    "*.ipynb",
]

[tool.ruff.lint]
# Enable rules:
# E/W = pycodestyle errors/warnings
# F = Pyflakes
# I = isort (import sorting)
# N = pep8-naming
# UP = pyupgrade (modern Python syntax)
# B = flake8-bugbear (common bugs)
# C4 = flake8-comprehensions
# SIM = flake8-simplify
# RUF = Ruff-specific rules
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

# Ignore specific rules that are too strict for data science scripts:
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Use raise from within except
    "SIM105", # Use contextlib.suppress (sometimes try/except is clearer)
    "UP007",  # Use | for Union (for Python 3.9 compatibility)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["polish-cave-data-scraper"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Don't require type hints everywhere (gradual typing)
ignore_missing_imports = true  # Ignore missing stubs for third-party libraries
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Exclude directories
exclude = [
    "^caves/",
    "^caves_upscaled/",
    "^logs/",
    "^waifu2x-ncnn-vulkan-20250915-macos/",
]
